--- a/gui/html/menu.html
+++ b/gui/html/menu.html
@@ -51,5 +51,37 @@
       </div>
     </a>
   </div>
+
+
+  <center>
+ <h1>Naivelyn</h1> 
+<h2>User Logins</h2>
+    <img alt="" src="https://komarev.com/ghpvc/?username=AfgunIsGun&color=red&label=Total+Logins">
+<h2>Attendance Commits</h2>
+<img alt="" src="http://test-five-lyart-22.vercel.app/api/cards/productive-time?username=AfgunIsGun&theme=2077&utcOffset=8">
+    <source media="(prefers-color-scheme: dark)" srcset="https://ssr-contributions-svg.vercel.app/_/AfgunIsGun?format=svg&weeks=50&dark=true">
+    <source media="(prefers-color-scheme: light)" srcset="https://ssr-contributions-svg.vercel.app/_/AfgunIsGun?format=svg&weeks=50">
+    <img alt="" src="https://ssr-contributions-svg.vercel.app/_/AfgunIsGun?format=svg&weeks=50" max-height="50">
+
+ <h1>Karl Benjamin</h1> 
+<h2>User Logins</h2>
+    <img alt="" src="https://komarev.com/ghpvc/?username=Golgrax&color=red&label=Total+Logins">
+<h2>Attendance Commits</h2>
+<img alt="" src="http://test-five-lyart-22.vercel.app/api/cards/productive-time?username=Golgrax&theme=2077&utcOffset=8">
+    <source media="(prefers-color-scheme: dark)" srcset="https://ssr-contributions-svg.vercel.app/_/Golgrax?format=svg&weeks=50&dark=true">
+    <source media="(prefers-color-scheme: light)" srcset="https://ssr-contributions-svg.vercel.app/_/Golgrax?format=svg&weeks=50">
+    <img alt="" src="https://ssr-contributions-svg.vercel.app/_/Golgrax?format=svg&weeks=50" max-height="50">
+
+ <h1>James</h1> 
+<h2>User Logins</h2>
+    <img alt="" src="https://komarev.com/ghpvc/?username=James&color=red&label=Total+Logins">
+<h2>Attendance Commits</h2>
+<img alt="" src="http://test-five-lyart-22.vercel.app/api/cards/productive-time?username=james&theme=2077&utcOffset=8">
+    <source media="(prefers-color-scheme: dark)" srcset="https://ssr-contributions-svg.vercel.app/_/james?format=svg&weeks=50&dark=true">
+    <source media="(prefers-color-scheme: light)" srcset="https://ssr-contributions-svg.vercel.app/_/james?format=svg&weeks=50">
+    <img alt="" src="https://ssr-contributions-svg.vercel.app/_/james?format=svg&weeks=50" max-height="50">
+</center>
+
+  
 </body>
 </html>
